--- a/wx-xcx/pages/product/product.wxml
+++ b/wx-xcx/pages/product/product.wxml
@@ -1,7 +1,8 @@
 <!-- pages/product/product.wxml -->
 <view class="product">
     <view class="banner">
-        <image src="../../image/protop.png" mode="aspectFit|aspectFill|widthFix" lazy-load="true" binderror="" bindload=""></image>
+        <image src="../../image/protop.png" mode="aspectFit|aspectFill|widthFix" lazy-load="true" binderror=""
+            bindload=""></image>
     </view>
     <view class="main">
         <view class="text">
@@ -9,9 +10,10 @@
             <view class="h5">装饰你的家</view>
         </view>
         <view class="prolist">
-            <view class="proli" wx:for="{{proli}}" wx:key="{{index}}">
+            <view class="proli" wx:for="{{proli}}" wx:key="{{index}}" bindtap="todetail" data-id="{{item.id}}">
                 <view class="proinfo">
-                    <image class="mainpic" src="{{item.img}}" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror="" bindload=""></image>
+                    <image class="mainpic" src="{{item.img}}" mode="aspectFit|aspectFill|widthFix" lazy-load="false"
+                        binderror="" bindload=""></image>
                     <view class="title">{{item.name}}</view>
                     <view class="price">￥{{item.price}}</view>
                 </view>
